# IPI-Stay-Fly-Driver

./: .gitignore  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
docs/: atk-fierce-x-protocol-notes.md
scripts/: tauri-cli.cmd
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: recover_polling.rs
src-tauri/src/: commands.rs  device.rs  main.rs  protocol.rs
src/components/: AddDeviceDialog.tsx  DevPanel.tsx  Sidebar.tsx  ThemePicker.tsx  TopBar.tsx
src/components/tabs/: AdvancedTab.tsx  ButtonsTab.tsx  DpiTab.tsx  HomeTab.tsx  LightningTab.tsx  OtherTab.tsx  PerformanceTab.tsx
src/components/ui/: Card.tsx  Slider.tsx  Switch.tsx
src/lib/: ipc.ts  themes.ts
src/locales/: de.json  en.json  es-MX.json  es.json  fr.json  it.json  pl.json  pt.json  zh.json
tools/webhid-sniffer-extension/: README.md  content.js  manifest.json  pageHook.js
