[package]
name = "ipi-fly-driver"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-minimize", "window-start-dragging", "window-unmaximize", "window-maximize", "window-close", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
